--- a/app/src/main/res/layout/list_item_coin.xml
+++ b/app/src/main/res/layout/list_item_coin.xml
@@ -10,47 +10,58 @@
             type="com.bsk.cointracker.data.remote.entities.Coin" />
     </data>
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
+    <soup.neumorphism.NeumorphCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:foreground="?attr/selectableItemBackground"
-        android:orientation="horizontal"
-        android:paddingHorizontal="16dp"
-        android:paddingVertical="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="parent">
+        app:neumorph_shapeType="flat"
+        app:neumorph_shadowElevation="4dp">
 
-        <TextView
-            android:layout_width="52dp"
-            android:layout_height="52dp"
-            android:layout_weight="0"
-            android:lines="1"
-            android:text="@{item.symbol}"
-            android:gravity="center"
-            android:paddingHorizontal="4dp"
-            android:textAllCaps="true"
-            android:textColor="@color/white"
-            android:background="@drawable/bg_coin_symbol"
-            android:textAppearance="?attr/textAppearanceSearchResultTitle"
-            app:autoSizeMaxTextSize="18sp"
-            app:autoSizeMinTextSize="12sp"
-            app:autoSizeTextType="uniform"
-            app:autoSizeStepGranularity="2sp"
-            tools:text="usdthalf" />
-
-        <TextView
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.1"
-            android:ellipsize="end"
-            android:paddingStart="8dp"
-            android:gravity="center|start"
-            android:paddingEnd="8dp"
-            android:text="@{item.name}"
-            android:textAppearance="?attr/textAppearanceSearchResultSubtitle"
-            tools:text="Tree House" />
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:foreground="?attr/selectableItemBackground"
+            android:orientation="horizontal"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/textView3"
+            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <soup.neumorphism.NeumorphCardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:neumorph_shapeType="basin">
+
+                <TextView
+                    android:layout_width="52dp"
+                    android:layout_height="52dp"
+                    android:layout_weight="0"
+                    android:lines="1"
+                    android:text="@{item.symbol}"
+                    android:gravity="center"
+                    android:paddingHorizontal="4dp"
+                    android:textAllCaps="true"
+                    android:textAppearance="?attr/textAppearanceSearchResultTitle"
+                    app:autoSizeMaxTextSize="18sp"
+                    app:autoSizeMinTextSize="12sp"
+                    app:autoSizeTextType="uniform"
+                    app:autoSizeStepGranularity="2sp"
+                    tools:text="usdthalf" />
+            </soup.neumorphism.NeumorphCardView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                android:ellipsize="end"
+                android:paddingStart="8dp"
+                android:gravity="center|start"
+                android:paddingEnd="8dp"
+                android:text="@{item.name}"
+                android:textAppearance="?attr/textAppearanceSearchResultSubtitle"
+                tools:text="Tree House" />
+        </LinearLayout>
+    </soup.neumorphism.NeumorphCardView>
 </layout>
