--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,10 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.CoinTracker" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.CoinTracker" parent="Theme.Neumorph.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/red_200</item>
         <item name="colorPrimaryDark">@color/red_700</item>
         <item name="colorOnPrimary">@color/black</item>
+        <item name="colorAccent">@color/orange_200</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/orange_200</item>
         <item name="colorSecondaryVariant">@color/orange_200</item>
